# simple_rag_ssed

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
scripts/: ask.py  build_index.py  serve.py
src/rag_simple/: __init__.py  chunker.py  config.py  generate.py  ingest.py  logging_setup.py  retrieve.py  store.py  text_extractor.py
